<resources>
    <string name="app_name">PolyAndroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="card_image_view">Card_image_view</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_main_text">Hello World!</string>
    <string name="declaration_activity_name">Nouvel incident</string>
    <string name="buttonValider">Valider</string>
    <string name="titre">Titre : seul champ obligatoire</string>
    <string name="type_d_incident">Type d\'incident :</string>
    <string name="lieu">Lieu :</string>
    <string name="urgence">Urgence :</string>
    <string name="images">Images :</string>
    <string name="commentaires">Commentaires :</string>
    <string name="sort_incident_importance">Incidents graves</string>
    <string name="sort_all_incident">Tous les incidents</string>
    <string name="button_text_take_picture">Prendre une photo</string>
    <string name="default_spinner">choisir...</string>
    <string name="toast_success_send">Déclaration envoyé</string>
    <string name="toast_fail_send">envoi échoué</string>
    <string name="incidents_recents" translatable="false">Incidents récents</string>
    <string name="notification">Notification :</string>
    <string name="Notification_Preference">notification_preference</string>
    <string name="sort_degradation">sort_degradation</string>
    <string name="degradation">Degradation</string>
    <string name="default_notification_channel_id">1</string>
    <string name="payload_id">id</string>
    <string name="default_image_bg">backGround</string>
    <string name="spacer">spacer</string>
    <string name="level_high">high</string>
    <string name="level_mid">mid</string>
    <string name="level_low">low</string>
    <string name="label_detailled_event_activity">Détails de l\'incident</string>
    <string name="notification_state">Notification_state</string>

</resources>
