<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView_gravity_3"
        android:layout_width="@dimen/gauge_size"
        android:layout_height="@dimen/gauge_size"
        android:layout_marginStart="1dp"
        android:contentDescription="@string/level_high"
        app:layout_constraintStart_toEndOf="@+id/imageView_gravity_2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_gravity_2"
        android:layout_width="@dimen/gauge_size"
        android:layout_height="@dimen/gauge_size"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="1dp"
        android:contentDescription="@string/level_mid"
        app:layout_constraintEnd_toStartOf="@+id/imageView_gravity_3"
        app:layout_constraintStart_toEndOf="@+id/imageView_gravity_1"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_gravity_1"
        android:layout_width="@dimen/gauge_size"
        android:layout_height="@dimen/gauge_size"
        android:layout_marginEnd="1dp"
        android:contentDescription="@string/level_low"
        app:layout_constraintEnd_toStartOf="@+id/imageView_gravity_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>