<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.incident.polyandroid.DeclarationActivity">

    <Button
        android:id="@+id/buttonValider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:clickable="false"
        android:text="@string/buttonValider"
        android:textSize="36sp"
        tools:layout_editor_absoluteX="256dp"
        tools:layout_editor_absoluteY="447dp" />

    <TextView
        android:id="@+id/LabelTitre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="true"
        android:text="@string/titre"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/EditTextTitre"
        android:layout_width="209dp"
        android:layout_height="42dp"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="true"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="107dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/LabelLieu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/LabelTitre"
        android:text="@string/lieu"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="79dp" />

    <TextView
        android:id="@+id/LabelType"
        android:layout_width="240dp"
        android:layout_height="43dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/LabelLieu"
        android:text="@string/type_d_incident"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="138dp" />

    <TextView
        android:id="@+id/LabelUrgence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/LabelType"
        android:text="@string/urgence"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="195dp" />

    <Spinner
        android:id="@+id/spinnerLieu"
        android:layout_width="224dp"
        android:layout_height="41dp"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/EditTextTitre"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="79dp" />

    <Spinner
        android:id="@+id/spinnerUrgence"
        android:layout_width="207dp"
        android:layout_height="42dp"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spinnerType"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="195dp" />

    <Spinner
        android:id="@+id/spinnerType"
        android:layout_width="126dp"
        android:layout_height="43dp"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spinnerLieu"
        tools:layout_editor_absoluteX="252dp"
        tools:layout_editor_absoluteY="137dp" />

    <TextView
        android:id="@+id/LabelImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/LabelUrgence"
        android:text="@string/images"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="257dp" />

    <TextView
        android:id="@+id/LabelCommentaires"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/Image1"
        android:layout_marginTop="24dp"
        android:text="@string/commentaires"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="406dp" />

    <EditText
        android:id="@+id/EditTextCommentaire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/LabelCommentaires"
        android:ems="17"
        android:inputType="textPersonName" />

    <ImageView
        android:id="@+id/Image1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="15dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <ImageView
        android:id="@+id/image2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/Image1"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/LabelImage"
        android:layout_toRightOf="@+id/Image1"
        app:srcCompat="@mipmap/ic_launcher" />
</RelativeLayout>
